--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "config": "^3.3.9",
     "express": "^4.18.2",
     "mongod": "^2.0.0",
-    "mongoose": "^6.9.1",
-    "tsc": "^2.0.4"
+    "mongoose": "^6.9.1"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
