--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,15 +22,13 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"],
-      "@controllers/*": ["controllers/*"],
-      "@dtos/*": ["Dto/*"],
-      "@exceptions/*": ["Exceptions/*"],
-      "@interfaces/*": ["Interfaces/*"],
-      "@models/*": ["Models/*"],
-      "@routes/*": ["Routes/*"],
-      "@services/*": ["Services/*"]
+      "@Controllers/*": ["Controllers/*"],
+      "@dto/*": ["dto/*"],
+      "@Exceptions/*": ["Exceptions/*"],
+      "@Interfaces/*": ["Interfaces/*"],
+      "@Models/*": ["Models/*"],
+      "@Routes/*": ["Routes/*"],
+      "@Services/*": ["Services/*"],
     }
-  },
-  "include": ["src/**/*.ts", "src/**/*.json"],
-  "exclude": ["node_modules"]
+  }
 }
