--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +19,7 @@
   "dependencies": {
     "class-validator": "^0.14.0",
     "config": "^3.3.9",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongod": "^2.0.0",
     "mongoose": "^6.9.1"
