--- a/.env.production.local
+++ b/.env.production.local
@@ -3,8 +3,8 @@ PORT = 3000
 DB_HOST = localhost
 DB_PORT = 27017
 DB_DATABASE = production
-DB_USERNAME = Muthukumar
-DB_PASSWORD = MVViAGjWUsyfNE9V
+DB_USERNAME = Muthu
+DB_PASSWORD = OGaeEbtZb94LOFkP
 DB_CLUSTER = cluster0
 
 SECRET_KEY = secretKey
